--- a/components/change-password.html
+++ b/components/change-password.html
@@ -4,12 +4,12 @@
 
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="../img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="../SMARTSTUDIO/img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
             </md-button>
         </div>
 
         <div layout="row" layout-align="center center" class="margin-top--20-px">
-            <img src="../img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
+            <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
         </div>
 
         <div layout="column">
@@ -27,22 +27,28 @@
 
             <form id="changePasswordForm" name="changePasswordForm" class="width-300-px">
                 <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
-                    <input required type="password" ng-model="changePassword.oldPassword" name="oldPassword" placeholder="Inserisci la vecchia password">
-                    <div ng-messages="changePasswordForm.oldPassword.$error || changePasswordForm.$submitted" role="alert">
+                    <input required type="password" ng-model="changePassword.oldPassword" name="oldPassword"
+                           placeholder="Inserisci la vecchia password">
+                    <div ng-messages="changePasswordForm.oldPassword.$error || changePasswordForm.$submitted"
+                         role="alert">
                         <div ng-message=" required">Inserire la vecchia password</div>
                     </div>
                 </md-input-container>
 
                 <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
-                    <input required type="password" ng-model="changePassword.newPassword" name="newPassword" placeholder="Inserisci nuova password">
-                    <div ng-messages="changePasswordForm.newPassword.$error || changePasswordForm.$submitted" role="alert">
+                    <input required type="password" ng-model="changePassword.newPassword" name="newPassword"
+                           placeholder="Inserisci nuova password">
+                    <div ng-messages="changePasswordForm.newPassword.$error || changePasswordForm.$submitted"
+                         role="alert">
                         <div ng-message=" required">Inserire una password</div>
                     </div>
                 </md-input-container>
 
                 <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
-                    <input required type="password" ng-model="changePassword.reNewPassword" name="reNewPassword" placeholder="Reinserisci la nuova password">
-                    <div ng-messages="changePasswordForm.reNewPassword.$error || changePasswordForm.$submitted" role="alert">
+                    <input required type="password" ng-model="changePassword.reNewPassword" name="reNewPassword"
+                           placeholder="Reinserisci la nuova password">
+                    <div ng-messages="changePasswordForm.reNewPassword.$error || changePasswordForm.$submitted"
+                         role="alert">
                         <div ng-message=" required">Reinserire la nuova password</div>
                     </div>
                 </md-input-container>
@@ -58,7 +64,8 @@
                 </div>
 
                 <div layout="column" layout-align="center center">
-                    <md-button ng-click="sendPassword(changePasswordForm)" class="md-warn color-darkblue">INVIA</md-button>
+                    <md-button ng-click="sendPassword(changePasswordForm)" class="md-warn color-darkblue">INVIA
+                    </md-button>
                 </div>
             </form>
         </div>
