--- a/components/recover-password-code.html
+++ b/components/recover-password-code.html
@@ -1,14 +1,16 @@
 <div>
-    <div layout="column"  class="height-100-vh">
+    <div layout="column" class="height-100-vh">
 
         <div layout="row" layout-sm="row" layout-xs="row" layout-align="center center" layout-wrap class="height-90">
 
-            <div id="recover-pass-code-container" flex="25" flex-lg="25" flex-xl="20" flex-sm="40" flex-xs="100" class="">
+            <div id="recover-pass-code-container" flex="25" flex-lg="25" flex-xl="20" flex-sm="40" flex-xs="100"
+                 class="">
 
                 <form id="recoverPassCodeForm" name="recoverPassCodeForm">
 
                     <div layout="row" layout-align="center center">
-                        <img src="../img/icons/login-icon.png" class="avatar-image border-radius-50" alt="Smart Track" title="Smart Track">
+                        <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="avatar-image border-radius-50"
+                             alt="Smart Track" title="Smart Track">
                     </div>
 
                     <div layout="column">
@@ -27,7 +29,8 @@
 
                         <md-input-container class="margin-top-0 margin-bottom-0">
                             <label for="usernameInput" class="font-smal">Username</label>
-                            <input required type="text" id="usernameInput" name="usernameInput" ng-model="username" title="">
+                            <input required type="text" id="usernameInput" name="usernameInput" ng-model="username"
+                                   title="">
                             <div ng-messages="recoverPassCodeForm.usernameInput.$error || recoverPassCodeForm.$submitted">
                                 <div ng-message="required">Inserire l'username</div>
                             </div>
@@ -35,7 +38,8 @@
 
                         <md-input-container class="margin-top-0 margin-bottom-0">
                             <label for="passwordInput" class="font-smal">Password</label>
-                            <input required type="password" id="passwordInput" name="passwordInput" ng-model="password" title="">
+                            <input required type="password" id="passwordInput" name="passwordInput" ng-model="password"
+                                   title="">
                             <div ng-messages="recoverPassCodeForm.passwordInput.$error || recoverPassCodeForm.$submitted">
                                 <div ng-message="required">Inserire password</div>
                             </div>
@@ -43,22 +47,30 @@
 
                         <md-input-container class="margin-top-0 margin-bottom-0">
                             <label for="confirmInput" class="font-smal">Conferma password</label>
-                            <input required type="password" id="confirmInput" name="confirmInput" ng-model="rePassword" title="">
+                            <input required type="password" id="confirmInput" name="confirmInput" ng-model="rePassword"
+                                   title="">
                             <div ng-messages="recoverPassCodeForm.confirmInput.$error || recoverPassCodeForm.$submitted">
                                 <div ng-message="required">Reinserire la password</div>
                             </div>
                         </md-input-container>
 
                         <div class="background-transparent-white text-center color-red font-smal
-                                    margint-top-5-px margin-bottom-10-px padding-10-px" ng-show="errorHandeling.passwordNotMatch">Le password non coincidono</div>
+                                    margint-top-5-px margin-bottom-10-px padding-10-px"
+                             ng-show="errorHandeling.passwordNotMatch">Le password non coincidono
+                        </div>
 
                         <div class="background-transparent-white text-center color-red font-smal
-                                    margint-top-5-px margin-bottom-10-px padding-10-px" ng-show="errorHandeling.wrongData">{{error}}</div>
+                                    margint-top-5-px margin-bottom-10-px padding-10-px"
+                             ng-show="errorHandeling.wrongData">{{error}}
+                        </div>
 
                         <div class="background-transparent-white text-center color-red font-smal
                                 margint-top-5-px margin-bottom-10-px padding-10-px"
-                             ng-show="errorHandeling.noConnection">Impossibile communicare con il server</div>
-                        <md-button id="recoverPassCodeButton" ng-click="resetPassword(recoverPassCodeForm)" class="md-raised margin-bottom-10">Reimposta password</md-button>
+                             ng-show="errorHandeling.noConnection">Impossibile communicare con il server
+                        </div>
+                        <md-button id="recoverPassCodeButton" ng-click="resetPassword(recoverPassCodeForm)"
+                                   class="md-raised margin-bottom-10">Reimposta password
+                        </md-button>
                     </div>
                 </form>
             </div>
