--- a/components/recover-password.html
+++ b/components/recover-password.html
@@ -1,5 +1,5 @@
 <div>
-    <div layout="column"  class="height-100-vh">
+    <div layout="column" class="height-100-vh">
 
         <div layout="row" layout-sm="row" layout-xs="row" layout-align="center center" layout-wrap class="height-90">
 
@@ -8,7 +8,8 @@
                 <form id="recoverPassForm" name="recoverPassForm">
 
                     <div layout="row" layout-align="center center">
-                        <img src="../img/icons/login-icon.png" class="avatar-image border-radius-50" alt="Smart Track" title="Smart Track">
+                        <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="avatar-image border-radius-50"
+                             alt="Smart Track" title="Smart Track">
                     </div>
 
                     <div layout="column">
@@ -19,7 +20,8 @@
 
                         <md-input-container class="margin-top-0 margin-bottom-0">
                             <label for="emailInput" class="font-smal">Email</label>
-                            <input required type="email" id="emailInput" name="emailInput" ng-model="email" ng-pattern="/^.+@.+\..+$/" title="">
+                            <input required type="email" id="emailInput" name="emailInput" ng-model="email"
+                                   ng-pattern="/^.+@.+\..+$/" title="">
                             <div ng-messages="recoverPassForm.emailInput.$error || recoverPassForm.$submitted">
                                 <div ng-message="required">Inserire una email</div>
                                 <div ng-message="pattern">Inserire una email valida</div>
@@ -27,19 +29,25 @@
                         </md-input-container>
 
                         <div class="background-transparent-white text-center font-smal color-red
-                                    margint-top-5-px margin-bottom-10-px padding-10-px" ng-show="errorHandeling.wrongData">Email non registrata</div>
+                                    margint-top-5-px margin-bottom-10-px padding-10-px"
+                             ng-show="errorHandeling.wrongData">Email non registrata
+                        </div>
 
                         <div class="background-transparent-white text-center color-red font-smal
                                     margint-top-5-px margin-bottom-10-px padding-10-px"
-                                      ng-show="errorHandeling.noConnection">Impossibile communicare con il server</div>
-                        <md-button id="recoverPassButton" ng-click="sendRecoverPassword(recoverPassForm)" class="md-raised margin-bottom-10">Recupera password</md-button>
+                             ng-show="errorHandeling.noConnection">Impossibile communicare con il server
+                        </div>
+                        <md-button id="recoverPassButton" ng-click="sendRecoverPassword(recoverPassForm)"
+                                   class="md-raised margin-bottom-10">Recupera password
+                        </md-button>
                     </div>
                 </form>
             </div>
         </div>
 
         <div layout="row" layout-align="center">
-            <p class="font-smal padding-10-px background-transparent-white">Ti verrà inviato un codice di verifica all'inidrizzo email inserito. L'indirizzo email deve essere
+            <p class="font-smal padding-10-px background-transparent-white">Ti verrà inviato un codice di verifica
+                all'inidrizzo email inserito. L'indirizzo email deve essere
                 associato ad un account Smart Studio!
             </p>
         </div>
