--- a/components/anchors.html
+++ b/components/anchors.html
@@ -3,12 +3,12 @@
     <md-toolbar id="popup-toolbar">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hideAnchors()">
-                <img src="../img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="../SMARTSTUDIO/img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
             </md-button>
         </div>
 
         <div layout="row" layout-align="center center" class="margin-top--20-px">
-            <img src="../img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
+            <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
         </div>
 
         <div layout="column">
@@ -26,46 +26,88 @@
 
             <md-table-container>
 
-                <table md-table md-row-select="options.rowSelection" multiple="true" ng-model="selected" md-progress="promise">
+                <table md-table md-row-select="options.rowSelection" ng-model="selected"
+                       md-progress="promise">
 
                     <thead md-head md-order="query.order">
-                        <tr md-row>
-                            <!--<th md-column ><span>id</span></th>-->
-                            <th md-column ><span class="color-darkcyan">NOME</span></th>
-                            <th md-column md-numeric><span class="color-darkcyan">X-POS</span></th>
-                            <th md-column md-numeric><span class="color-darkcyan">Y-POS</span></th>
-                            <th md-column md-numeric><span class="color-darkcyan">Z-POS</span></th>
-                            <th md-column md-numeric><span class="color-darkcyan">RAGGIO</span></th>
-                            <th md-column ><span class="color-darkcyan">IP</span></th>
-                            <th md-column ><span class="color-darkcyan">RSSI</span></th>
-                            <th md-column md-numeric><span class="color-darkcyan">PROXIMITY</span></th>
-                            <th md-column md-numeric><span class="color-darkcyan">TYPE</span></th>
-                            <th md-column ><span class="color-darkcyan">PERMITTED ASSET</span></th>
-                        </tr>
+                    <tr md-row>
+                        <th md-column><span class="color-darkcyan"></span></th>
+                        <th md-column><span class="color-darkcyan">NOME</span></th>
+                        <th md-column md-numeric><span class="color-darkcyan">X-POS</span></th>
+                        <th md-column md-numeric><span class="color-darkcyan">Y-POS</span></th>
+                        <th md-column md-numeric><span class="color-darkcyan">Z-POS</span></th>
+                        <th md-column><span class="color-darkcyan">PIANO</span></th>
+                        <th md-column md-numeric><span class="color-darkcyan">RAGGIO</span></th>
+                        <th md-column><span class="color-darkcyan">IP</span></th>
+                        <th md-column><span class="color-darkcyan">RSSI</span></th>
+                        <th md-column md-numeric><span class="color-darkcyan">PROXIMITY</span></th>
+                        <th md-column md-numeric><span class="color-darkcyan">TYPE</span></th>
+                        <th md-column><span class="color-darkcyan">PERMITTED ASSET</span></th>
+                    </tr>
                     </thead>
 
                     <tbody md-body>
-                        <tr md-row md-select="anchor" md-on-select="logItem" md-auto-select="true" ng-repeat="anchor in anchors | limitTo: query.limit: (query.page -1 ) * query.limit">
-                            <!--<td md-cell>{{anchor.id}}</td>-->
-                            <td md-cell ng-click="editCell($event, anchor, 'name')" ng-class="{'md-placeholder': !anchor.name}">{{anchor.name || 'Inserire nome'}}</td>
-                            <td md-cell ng-click="editCell($event, anchor, 'x_pos')" ng-class="{'md-placeholder': !anchor.x_pos.toString()}">{{anchor.x_pos.toString() || 'Inserire x_pos'}}</td>
-                            <td md-cell ng-click="editCell($event, anchor, 'y_pos')" ng-class="{'md-placeholder': !anchor.y_pos.toString()}">{{anchor.y_pos.toString() || 'Inserire y_pos'}}</td>
-                            <td md-cell ng-click="editCell($event, anchor, 'z_pos')" ng-class="{'md-placeholder': !anchor.z_pos.toString()}">{{anchor.z_pos.toString() || 'Inserire z_pos'}}</td>
-                            <td md-cell ng-click="editCell($event, anchor, 'radius')" ng-class="{'md-placeholder': !anchor.radius.toString()}">{{anchor.radius.toString() || 'Inserire radius'}}</td>
-                            <td md-cell ng-click="editCell($event, anchor, 'ip')" ng-class="{'md-placeholder': !anchor.ip}">{{anchor.ip || 'Inserire ip'}}</td>
-                            <td md-cell ng-click="editCell($event, anchor, 'rssi')" ng-class="{'md-placeholder': !anchor.rssi.toString()}">{{anchor.rssi.toString() || 'Inserire rssi'}}</td>
-                            <td md-cell ng-click="editCell($event, anchor, 'proximity')" ng-class="{'md-placeholder': !anchor.proximity.toString()}">{{anchor.proximity.toString() || 'Inserire proximity'}}</td>
-                            <td md-cell ng-click="editCell($event, anchor, 'type')" ng-class="{'md-placeholder': !anchor.type.toString()}">{{anchor.type.toString() || 'Inserire tipo'}}</td>
-                            <td md-cell ng-click="editCell($event, anchor, 'permitted_asset')" ng-class="{'md-placeholder': !anchor.permitted_asset}">{{anchor.permitted_asset || 'Inserire valore'}}</td>
+                        <tr md-row md-select="anchor" md-on-select="logItem" md-auto-select="true"
+                            ng-repeat="anchor in anchors | limitTo: query.limit: (query.page -1 ) * query.limit">
+                            <td md-cell><img alt="Stato ancora" title="Stato ancora"
+                                    ng-src="{{anchor.is_online ? '../SMARTSTUDIO/img/icons/tags/anchor_online_16.png' : '../SMARTSTUDIO/img/icons/tags/anchor_offline_16.png'}}">
+                            </td>
+
+                            <td md-cell ng-click="editCell($event, anchor, 'name')"
+                                ng-class="{'md-placeholder': !anchor.name}">{{anchor.name || 'Inserire nome'}}
+                            </td>
+
+                            <td md-cell ng-click="editCell($event, anchor, 'x_pos')"
+                                ng-class="{'md-placeholder': !anchor.x_pos.toString()}">{{anchor.x_pos.toString() ||
+                                'Inserire x_pos'}}
+                            </td>
+
+                            <td md-cell ng-click="editCell($event, anchor, 'y_pos')"
+                                ng-class="{'md-placeholder': !anchor.y_pos.toString()}">{{anchor.y_pos.toString() ||
+                                'Inserire y_pos'}}
+                            </td>
+
+                            <td md-cell ng-click="editCell($event, anchor, 'z_pos')"
+                                ng-class="{'md-placeholder': !anchor.z_pos.toString()}">{{anchor.z_pos.toString() ||
+                                'Inserire z_pos'}}
+                            </td>
+                            <td md-cell ng-click="editCell($event, anchor, 'radius')"
+                                ng-class="{'md-placeholder': !anchor.floor_name.toString()}">{{anchor.floor_name.toString()
+                                || 'Inserire piano'}}
+                            </td>
+                            <td md-cell ng-click="editCell($event, anchor, 'radius')"
+                                ng-class="{'md-placeholder': !anchor.radius.toString()}">{{anchor.radius.toString() ||
+                                'Inserire radius'}}
+                            </td>
+
+                            <td md-cell ng-click="editCell($event, anchor, 'ip')" ng-class="{'md-placeholder': !anchor.ip}">
+                                {{anchor.ip || 'Inserire ip'}}
+                            </td>
+
+                            <td md-cell ng-click="editCell($event, anchor, 'rssi')"
+                                ng-class="{'md-placeholder': !anchor.rssi.toString()}">{{anchor.rssi.toString() || 'Inserire rssi'}}
+                            </td>
+
+                            <td md-cell ng-click="editCell($event, anchor, 'proximity')"
+                                ng-class="{'md-placeholder': !anchor.proximity.toString()}">{{anchor.proximity.toString() ||
+                                'Inserire proximity'}}
+                            </td>
+
+                            <td md-cell ng-click="editCell($event, anchor, 'type')"
+                                ng-class="{'md-placeholder': !anchor.type.toString()}">{{anchor.type.toString() || 'Inserire tipo'}}
+                            </td>
+
+                            <td md-cell ng-click="editCell($event, anchor, 'permitted_asset')"
+                                ng-class="{'md-placeholder': !anchor.permitted_asset}">{{anchor.permitted_asset || 'Inserire valore'}}
+                            </td>
                         </tr>
                     </tbody>
                 </table>
             </md-table-container>
 
-            <md-table-pagination md-limit="query.limit" md-limit-options="[5, 10, 15]" md-page="query.page" md-total="{{anchors.length}}" md-on-paginate="getAnchors"></md-table-pagination>
-            <!--<div layout="row" layout-align="end end" class="width-100">-->
-                <!--<md-button class="md-primary" ng-click="saveAnchors()">Salva</md-button>-->
-                <!--<md-button class="md-primary" ng-click="hideAnchors()">Cancella</md-button>-->
+            <md-table-pagination md-limit="query.limit" md-limit-options="query.limitOptions" md-page="query.page"
+                                 md-total="{{anchors.length}}" md-on-paginate="getAnchors">
+            </md-table-pagination>
             <!--</div>-->
         </div>
     </md-content>
