--- a/components/emergency-alarm-info.html
+++ b/components/emergency-alarm-info.html
@@ -3,12 +3,12 @@
     <md-toolbar id="popup-toolbar" class="background-red">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="../img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="../SMARTSTUDIO/img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
             </md-button>
         </div>
 
         <div layout="row" layout-align="center center" class="margin-top--20-px">
-            <img src="../img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
+            <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
         </div>
 
         <div layout="column">
@@ -23,32 +23,33 @@
     <md-content class="popup-padding">
         <div layout="row" layout-align="center center">
             <div layout="column">
-                <canvas class="chart chart-doughnut"
-                    chart-data="data" chart-labels="labels" chart-colors="colors">
+                <md-progress-circular ng-show="data.length === 0" md-diameter="100"
+                                      md-mode="indeterminate"></md-progress-circular>
+                <canvas ng-show="data.length !== 0" class="chart chart-doughnut"
+                        chart-data="data" chart-labels="labels" chart-colors="colors">
                 </canvas>
             </div>
             <div layout="column">
                 <md-list>
                     <md-list-item class="md-3-line">
-                        <img src="../img/icons/safe-men.png" class="md-avatar">
+                        <img src="../SMARTSTUDIO/img/icons/safe-men.png" class="md-avatar" alt="Persona in area sicura"
+                             title="Persona in area sicura">
                         <div class="md-list-item-text" layout="column">
                             <h3>Persone nell'area sicura: <b class="color-green">{{ men.safe }}</b></h3>
                             <h4>{{ men.safe }} persone si trovano in una zona sicura</h4>
-                            <!--<p>-->
-                                <!--<md-chips input-aria-label="Tag in area sicura" input-aria-describedby="staticChipsNote">-->
-                                    <!--<md-chip ng-repeat="safeTag in safeTags">{{safeTag.tag_name}}</md-chip>-->
-                                <!--</md-chips>-->
-                            <!--</p>-->
                         </div>
                     </md-list-item>
                     <md-list-item class="md-3-line">
-                        <img src="../img/icons/unsafe-men.png" class="md-avatar">
+                        <img src="../SMARTSTUDIO/img/icons/unsafe-men.png" class="md-avatar"
+                             alt="Persona non in area sicura" title="Persona non in area sicura">
                         <div class="md-list-item-text" layout="column">
                             <h3>Persone disperse: <b class="color-red">{{ men.unsafe }}</b></h3>
                             <h4>{{ men.unsafe }} persone risultano disperse all'interno del locale</h4>
                             <p>
-                                <md-chips input-aria-label="Tag in area sicura" input-aria-describedby="staticChipsNote">
-                                    <md-chip class="background-red color-white" ng-repeat="unsafeTag in unsafeTags">{{unsafeTag.name}}</md-chip>
+                                <md-chips input-aria-label="Tag non in area sicura">
+                                    <md-chip class="background-red color-white" ng-repeat="unsafeTag in unsafeTags">
+                                        {{unsafeTag.name}}
+                                    </md-chip>
                                 </md-chips>
                             </p>
                         </div>
