--- a/components/history.html
+++ b/components/history.html
@@ -3,12 +3,12 @@
     <md-toolbar id="popup-toolbar" ng-class="">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="../img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="../SMARTSTUDIO/img/icons/close-icon.png" alt="Close" title="Close"/>
             </md-button>
         </div>
 
         <div layout="row" layout-align="center center" class="margin-top--20-px">
-            <img src="../img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
+            <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
         </div>
 
         <div layout="column">
@@ -24,14 +24,16 @@
         <div layout="column" layout-align="center center">
             <div class="border-1-gray history-filter">
                 <div layout="column" layout-align="center start">
-                    <md-subheader class="color-darkcyan">Filtro: </md-subheader>
+                    <md-subheader class="color-darkcyan">Filtro:</md-subheader>
                 </div>
 
                 <div layout="row">
-                    <md-subheader>Dal: </md-subheader>
-                    <md-datepicker ng-model="history.fromDate" md-placeholder="Selezionare data" md-open-on-focus></md-datepicker>
-                    <md-subheader>al: </md-subheader>
-                    <md-datepicker ng-model="history.toDate" md-placeholder="Selezionare data" md-open-on-focus></md-datepicker>
+                    <md-subheader>Dal:</md-subheader>
+                    <md-datepicker ng-model="history.fromDate" md-placeholder="Selezionare data"
+                                   md-open-on-focus></md-datepicker>
+                    <md-subheader>al:</md-subheader>
+                    <md-datepicker ng-model="history.toDate" md-placeholder="Selezionare data"
+                                   md-open-on-focus></md-datepicker>
                 </div>
                 <div layout="row" class="width-100">
                     <div layout="column" layout-align="center start" class="width-50 padding-left-10-px">
@@ -40,7 +42,7 @@
                             <label>Nome WeTag</label>
 
                             <md-select ng-model="history.selectedTag">
-
+                                <md-option>Qualsiasi</md-option>
                                 <md-option ng-repeat="tag in history.tags" ng-value="tag.name">
                                     {{tag.name}}
                                 </md-option>
@@ -53,6 +55,7 @@
                             <label>Tipologia evento</label>
 
                             <md-select ng-model="history.selectedEvent">
+                                <md-option>Qualsiasi</md-option>
                                 <md-option ng-repeat="event in history.events" ng-value="event.description">
                                     {{event.description}}
                                 </md-option>
@@ -68,8 +71,8 @@
 
                         <thead md-head md-order="query.order">
                         <tr md-row>
-                            <th md-column ><span class="color-darkcyan">DATA</span></th>
-                            <th md-column ><span class="color-darkcyan">EVENTO</span></th>
+                            <th md-column><span class="color-darkcyan">DATA</span></th>
+                            <th md-column><span class="color-darkcyan">EVENTO</span></th>
                             <th md-column md-numeric><span class="color-darkcyan">TAG</span></th>
                             <th md-column md-numeric><span class="color-darkcyan">ANCORA</span></th>
                             <th md-column md-numeric><span class="color-darkcyan">SITO</span></th>
@@ -81,23 +84,34 @@
                         </thead>
 
                         <tbody md-body>
-                            <tr md-row md-select="anchor" md-on-select="logItem" md-auto-select="true" ng-repeat="row in historyRows | limitTo: query.limit: (query.page -1 ) * query.limit">
-                                <td md-cell>{{row.time}}</td>
-                                <td md-cell ng-class="{'md-placeholder': !row.event}">{{row.event || 'Dato non disponibile'}}</td>
-                                <td md-cell ng-class="{'md-placeholder': !row.tag}">{{row.tag || 'Dato non disponibile'}}</td>
-                                <td md-cell ng-class="{'md-placeholder': !row.anchor}">{{row.anchor || 'Dato non disponibile'}}</td>
-                                <td md-cell ng-class="{'md-placeholder': !row.location}">{{row.location || 'Dato non disponibile'}}</td>
-                                <td md-cell ng-class="{'md-placeholder': !row.floor}">{{row.floor || 'Dato non disponibile'}}</td>
-                                <td md-cell ng-class="{'md-placeholder': !row.tag_x_pos.toString()}">{{row.tag_x_pos.toString() || 'Dato non disponibile'}}</td>
-                                <td md-cell ng-class="{'md-placeholder': !row.tag_y_pos.toString()}">{{row.tag_y_pos.toString() || 'Dato non disponibile'}}</td>
-                            </tr>
-                            <tr md-row ng-show="tableEmpty">
-                                <td md-cell colspan="8" class="text-center color-orange">Nessun risultato trovato</td>
-                            </tr>
+                        <tr md-row md-select="anchor" md-on-select="logItem" md-auto-select="true"
+                            ng-repeat="row in historyRows | limitTo: query.limit: (query.page -1 ) * query.limit track by $index">
+                            <td md-cell>{{row.time}}</td>
+                            <td md-cell ng-class="{'md-placeholder': !row.event}">{{row.event || 'Dato non disponibile'}}
+                            </td>
+                            <td md-cell ng-class="{'md-placeholder': !row.tag}">{{row.tag || 'Dato non disponibile'}}
+                            </td>
+                            <td md-cell ng-class="{'md-placeholder': !row.anchor}">{{row.anchor || 'Dato non disponibile'}}
+                            </td>
+                            <td md-cell ng-class="{'md-placeholder': !row.location}">{{row.location || 'Dato non disponibile'}}
+                            </td>
+                            <td md-cell ng-class="{'md-placeholder': !row.floor}">{{row.floor || 'Dato non disponibile'}}
+                            </td>
+                            <td md-cell ng-class="{'md-placeholder': !row.tag_x_pos.toString()}">
+                                {{row.tag_x_pos.toString() || 'Dato non disponibile'}}
+                            </td>
+                            <td md-cell ng-class="{'md-placeholder': !row.tag_y_pos.toString()}">
+                                {{row.tag_y_pos.toString() || 'Dato non disponibile'}}
+                            </td>
+                        </tr>
+                        <tr md-row ng-show="tableEmpty">
+                            <td md-cell colspan="8" class="text-center color-orange">Nessun risultato trovato</td>
+                        </tr>
                         </tbody>
                     </table>
                 </md-table-container>
-                <md-table-pagination md-limit="query.limit" md-limit-options="query.limitOptions" md-page="query.page" md-total="{{historyRows.length}}" md-on-paginate=""></md-table-pagination>
+                <md-table-pagination md-limit="query.limit" md-limit-options="query.limitOptions" md-page="query.page"
+                                     md-total="{{historyRows.length}}" md-on-paginate=""></md-table-pagination>
             </div>
         </div>
     </md-content>
