--- a/components/indoor-alarms-info.html
+++ b/components/indoor-alarms-info.html
@@ -3,17 +3,17 @@
     <md-toolbar id="popup-toolbar" class="background-red">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="../img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="../SMARTSTUDIO/img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
             </md-button>
         </div>
 
         <div layout="row" layout-align="center center" class="margin-top--20-px">
-            <img src="../img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
+            <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
         </div>
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class=" font-iceberg font-x-large">ALARMI ATTIVI</h1>
+                <h1 class=" font-iceberg font-x-large">ALLARMI ATTIVI</h1>
             </div>
         </div>
     </md-toolbar>
@@ -22,11 +22,12 @@
     <!--popup content-->
     <md-content class="popup-padding">
         <div layout="column" layout-align="center center">
+            <md-progress-circular ng-show="alarms.length === 0" md-diameter="100" md-mode="indeterminate"></md-progress-circular>
             <md-list>
                 <md-divider ></md-divider>
-                <md-list-item class="md-3-line" ng-repeat="alarm in alarms" ng-click="null">
+                <md-list-item class="md-3-line" ng-repeat="alarm in alarms" ng-click="loadLocation(alarm)">
                     <md-divider ></md-divider>
-                    <img ng-src="{{alarm.image}}" class="md-avatar" alt="{{item.who}}" />
+                    <img ng-src="{{alarm.image}}" class="md-avatar" alt="{{alarm.name}}" />
                     <div class="md-list-item-text" layout="column">
                         <h3>{{ alarm.tag }}</h3>
                         <h4>{{ alarm.name }}</h4>
