--- a/components/indoor_offline_anchors_info.html
+++ b/components/indoor_offline_anchors_info.html
@@ -3,17 +3,17 @@
     <md-toolbar id="popup-toolbar" class="background-red">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="../img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="../SMARTSTUDIO/img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
             </md-button>
         </div>
 
         <div layout="row" layout-align="center center" class="margin-top--20-px">
-            <img src="../img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
+            <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
         </div>
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class=" font-iceberg font-x-large">STATO TAG DISATIVATI</h1>
+                <h1 class=" font-iceberg font-x-large">STATO ANCORE DISATTIVATE</h1>
             </div>
         </div>
     </md-toolbar>
@@ -22,27 +22,31 @@
     <!--popup content-->
     <md-content class="popup-padding">
         <div layout="row" layout-align="center center">
-            <div layout="column">
-                <canvas class="chart chart-doughnut"
-                    chart-data="data" chart-labels="labels" chart-colors="colors">
+            <div layout="column" layout-align="center center">
+                <md-progress-circular ng-show="data.length === 0" md-diameter="100" md-mode="indeterminate"
+                                      class="margin-left-right-50-px"></md-progress-circular>
+                <canvas ng-show="data.length !== 0" class="chart chart-doughnut"
+                        chart-data="data" chart-labels="labels" chart-colors="colors">
                 </canvas>
             </div>
             <div layout="column">
                 <md-list>
                     <md-list-item class="md-2-line">
-                        <img src="../img/icons/tags/anchor_online_24.png" class="md-avatar">
+                        <img src="../SMARTSTUDIO/img/icons/tags/anchor_online_24.png" class="md-avatar">
                         <div class="md-list-item-text" layout="column">
                             <h3>Anchore online: <b class="color-green">{{anchorsState.online}}</b></h3>
                             <h4>{{ anchorsState.online }} ancora/e e'/sono online e trasmette/ono dati</h4>
                         </div>
                     </md-list-item>
                     <md-list-item class="md-3-line">
-                        <img src="../img/icons/tags/anchor_offline_24.png" class="md-avatar">
+                        <img src="../SMARTSTUDIO/img/icons/tags/anchor_offline_24.png" class="md-avatar">
                         <div class="md-list-item-text" layout="column">
                             <h3>Anchore offline: <b class="color-darkgray">{{ offlineAnchors.length }}</b></h3>
                             <h4>{{ offlineAnchors.length }} anchora/e e'/sono offline e non trasmette/ono dati</h4>
                             <p>
-                                <md-chips ng-model="offlineAnchors" readonly="true" input-aria-label="Tag in area sicura" input-aria-describedby="staticChipsNote">
+                                <md-chips ng-model="offlineAnchors" readonly="true"
+                                          input-aria-label="Tag in area sicura"
+                                          input-aria-describedby="staticChipsNote">
                                     <md-chip-template>{{$chip.name}}</md-chip-template>
                                 </md-chips>
                             </p>
