--- a/components/tag-info.html
+++ b/components/tag-info.html
@@ -3,12 +3,12 @@
     <md-toolbar id="popup-toolbar" ng-class="isTagInAlarm">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="../img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="../SMARTSTUDIO/img/icons/close-icon.png" alt="Close" title="Close"/>
             </md-button>
         </div>
 
         <div layout="row" layout-align="center center" class="margin-top--20-px">
-            <img src="../img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
+            <img src="../SMARTSTUDIO/img/icons/login-icon.png" class="popup-icon" alt="Smart Track" title="Smart Track">
         </div>
 
         <div layout="column">
@@ -24,18 +24,21 @@
         <div layout="column" layout-align="center center">
             <md-list>
                 <md-list-item class="width-300-px">
-                    <p class="float-left">WeTAG:</p> <p class="float-right text-right">{{tag.id}}</p>
+                    <p class="float-left">WeTAG:</p>
+                    <p class="float-right text-right">{{tag.id}}</p>
                 </md-list-item>
                 <md-list-item class="width-300-px">
-                    <p class="float-left">Piano:</p> <p class="float-right text-right">{{tag.floor_name}}</p>
+                    <p class="float-left">Piano:</p>
+                    <p class="float-right text-right">{{tag.floor_name}}</p>
                 </md-list-item>
                 <md-list-item class="width-300-px">
-                    <p class="float-left">Ancora:</p> <p class="float-right text-right">{{tag.anchor_name}}</p>
+                    <p class="float-left">Ancora:</p>
+                    <p class="float-right text-right">{{tag.anchor_name}}</p>
                 </md-list-item>
             </md-list>
             <md-list>
                 <md-list-item class="md-3-line" ng-repeat="alarm in alarms" ng-click="null">
-                    <img ng-src="{{alarm.image}}" class="md-avatar" alt="{{item.who}}" />
+                    <img ng-src="{{alarm.image}}" class="md-avatar" alt="{{item.who}}"/>
                     <div class="md-list-item-text" layout="column">
                         <h3>{{ alarm.tag }}</h3>
                         <h4>{{ alarm.name }}</h4>
